--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,12 @@ env_logger = "0.11.8"
 fps_ticker = "1.0.0"
 glam = "0.30.9"
 glium = "0.36.0"
+glyph_brush = "0.7.12"
 image = "0.25.8"
 include_folder = "0.3.0"
 log = "0.4.28"
 palette = "0.7.6"
+rand = "0.9.2"
 uuid = { version = "1.18.1", features = ["v4"] }
 winit_input_helper = "0.17.0"
 
