--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ image = "0.25.8"
 include_folder = "0.3.0"
 log = "0.4.28"
 palette = "0.7.6"
+paste = "1.0.15"
 rand = "0.9.2"
 uuid = { version = "1.18.1", features = ["v4"] }
 winit_input_helper = "0.17.0"
