--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,21 +5,23 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+bevy_math = "0.17.2"
 bumpalo = { version = "3.19.0", features = ["collections"] }
 color-eyre = "0.6.5"
 egui_glium = "0.31.1"
 egui_plot = {version = "0.31", optional = true}
 env_logger = "0.11.8"
 fps_ticker = "1.0.0"
-glam = "0.30.9"
 glium = "0.36.0"
 glyph_brush = "0.7.12"
 image = "0.25.8"
 include_folder = "0.3.0"
 log = "0.4.28"
+nalgebra = { version = "0.34.1", features = ["convert-glam030"] }
 palette = "0.7.6"
 paste = "1.0.15"
 rand = "0.9.2"
+rapier2d = { version = "0.30.1", features = ["simd-stable"] }
 uuid = { version = "1.18.1", features = ["v4"] }
 winit_input_helper = "0.17.0"
 
