--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ include_folder = "0.3.0"
 log = "0.4.28"
 lyon = "1.0.16"
 nalgebra = { version = "0.34.1", features = ["convert-glam030"] }
+obj-rs = "0.7.4"
 palette = "0.7.6"
 paste = "1.0.15"
 rand = "0.9.2"
