--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ anyhow = "1.0.100"
 bevy_math = "0.17.2"
 bumpalo = { version = "3.19.0", features = ["collections"] }
 color-eyre = "0.6.5"
-earcutr = "0.5.0"
 egui_glium = "0.31.1"
 egui_plot = {version = "0.31", optional = true}
 env_logger = "0.11.8"
+fontdue = "0.9.3"
 fps_ticker = "1.0.0"
 glium = "0.36.0"
 glyph_brush = "0.7.12"
@@ -25,8 +25,7 @@ palette = "0.7.6"
 paste = "1.0.15"
 rand = "0.9.2"
 rapier2d = { version = "0.30.1", features = ["simd-stable"] }
-rodio = "0.21.1"
-uuid = { version = "1.18.1", features = ["v4"] }
+tunes = { version = "1.0.2", features = ["gpu"] }
 winit_input_helper = "0.17.0"
 
 [features]
