--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ rand = "0.9.2"
 rapier2d = { version = "0.30.1", features = ["simd-stable"] }
 tunes = { version = "1.0.2", features = ["gpu"] }
 winit_input_helper = "0.17.0"
+engine_4_macros = { path = "./crates/engine_4_macros" }
 
 [features]
 default = ["debugging"]
