--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["codegen-backend"]
+
 [package]
 name = "engine_4"
 version = "0.1.0"
@@ -28,6 +30,36 @@ rapier2d = { version = "0.30.1", features = ["simd-stable"] }
 tunes = { version = "1.0.2", features = ["gpu"] }
 winit_input_helper = "0.17.0"
 engine_4_macros = { path = "./crates/engine_4_macros" }
+
+[profile.dev]
+opt-level = 1
+codegen-backend = "cranelift"
+
+[profile.dev.package."*"]
+opt-level = 3
+codegen-backend = "llvm"
+
+[profile.release]
+# Compile the entire crate as one unit.
+# Slows compile times, marginal improvements.
+codegen-units = 1
+# Do a second optimization pass over the entire program, including dependencies.
+# Slows compile times, marginal improvements.
+lto = "thin"
+
+[toolchain]
+channel = "nightly"
+
+[target.x86_64-unknown-linux-gnu]
+linker = "clang"
+rustflags = [
+    "-C", "link-arg=-fuse-ld=/usr/bin/mold",
+  # (Nightly) Make the current crate share its generic instantiations
+  "-Zshare-generics=y",
+]
+
+[unstable]
+codegen-backend = true
 
 [features]
 default = ["debugging"]
